--- a/public/index.html
+++ b/public/index.html
@@ -42,13 +42,13 @@
         <div class="header_top">
           <div class="container-fluid">
             <div class="contact_nav">
-              <a href="">
+              <a href="https://t.me/vigilvest">
                 <i class="fa fa-twitter text-white" aria-hidden="true"></i>
                 <span>
 
                 </span>
               </a>
-              <a href="">
+              <a href="https://t.me/vigilvest">
                 <i class="fa fa-telegram text-white" aria-hidden="true"></i>
                 <span>
 
